--- a/kdecore/tests/Makefile.am
+++ b/kdecore/tests/Makefile.am
@@ -25,7 +25,8 @@ check_PROGRAMS = kconfigtest klocaletest klocaletest2 kprocesstest ksimpleconfig
 	kstddirstest kurltest kuniqueapptest ktempfiletest krandomsequencetest \
 	kdebugtest ksocktest kstringhandlertest kcmdlineargstest kapptest \
 	kmemtest kidlservertest kidlclienttest dcopkonqtest kipctest \
-	cplusplustest kiconloadertest kresolvertest kmdcodectest knotifytest kcatalogue
+	cplusplustest kiconloadertest kresolvertest kmdcodectest knotifytest kcatalogue \
+	ksortablevaluelisttest
 
 noinst_HEADERS = kconfigtest.h klocaletest.h kprocesstest.h KIDLTest.h kipctest.h
 
@@ -58,4 +59,4 @@ kresolvertest_SOURCES = kresolvertest.cpp
 kmdcodectest_SOURCES = kmdcodectest.cpp 
 knotifytest_SOURCES = knotifytest.cpp
 kcatalogue_SOURCES = kcatalogue.cpp libintl.cpp
-
+ksortablevaluelisttest_SOURCES = ksortablevaluelisttest.cpp
