--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: kdelibs
-Build-Depends: automake (>= 1:1.4-p4-1.1), autoconf, debhelper (>> 3.0.0), flex, bison, gettext, libqt-dev (>= 3:2.3.1-1), uic (>= 3:2.3.1-1), libtiff3g-dev | libtiff-dev, libaudiofile-dev, libasound2-dev (>= 0.9.0beta7-1), docbook, libbz2-dev, libpcre3-dev, libcupsys2-dev | cupsys-dev, libxml2-dev (>= 2.4.8), libxslt1-dev (>= 1.0.6), binutils (>= 2.11.92.0.5-3), libsasl-dev, libssl-dev (>= 0.9.6b-1)
+Build-Depends: automake (>= 1:1.4-p4-1.1), autoconf, debhelper (>> 3.0.0), flex, bison, gettext, libqt-dev (>= 3:2.3.1-1), uic (>= 3:2.3.1-1), libtiff3g-dev | libtiff-dev, libaudiofile-dev, libasound2-dev (>= 0.9.0beta7-1), docbook, libbz2-dev, libpcre3-dev, libcupsys2-dev | cupsys-dev, libxml2-dev (>= 2.4.8), libxslt1-dev (>= 1.0.6), binutils (>= 2.11.92.0.5-3), libsasl-dev
 Build-Depends-Indep: kdoc, qt-doc
 Build-Conflicts: nas-lib, qt3-tools, libglib1.3-dev
 Section: libs
@@ -13,7 +13,6 @@ Section: libs
 Replaces: kdelibs2g, kdebase (<< 4:2.2.1-1), kdebase-libs (<< 4:2.2.1-2), konqueror (<< 4:2.2.1-1), kdelibs3-crypto
 Depends: ${shlibs:Depends}, python, xbase-clients
 Suggests: libarts | libarts-alsa, libkmid | libkmid-alsa, kdelibs3-cups, aspell | ispell, anti-aliasing-howto, gdb, libsocksd | libsocks4, libssl0.9.6
-Conflicts: kdelibs3-crypto
 Description: KDE core libraries (runtime files)
  KDE core libraries.
  You need these files to run kde applications.
