--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: kdelibs
-Build-Depends: automake (>= 1:1.4-p4-1.1), autoconf, debhelper (>> 3.0.0), flex, bison, gettext, libqt-dev (>= 3:2.3.1-1), uic (>= 3:2.3.1-1), libtiff3g-dev | libtiff-dev, libaudiofile-dev, libasound2-dev (>= 0.9.0beta7-1), docbook, libbz2-dev, libpcre3-dev, libcupsys2-dev | cupsys-dev, libxml2-dev (>= 2.4.8), libxslt1-dev (>= 1.0.6), binutils (>= 2.11.92.0.5-3), libsasl-dev
+Build-Depends: automake (>= 1:1.4-p4-1.1), autoconf, debhelper (>> 3.0.0), flex, bison, gettext, libqt-dev (>= 3:2.3.1-1), uic (>= 3:2.3.1-1), libtiff3g-dev | libtiff-dev, libaudiofile-dev, libasound2-dev (>= 0.9.0beta7-1), docbook, libbz2-dev, libpcre3-dev, libcupsys2-dev | cupsys-dev, libxml2-dev (>= 2.4.8), libxslt1-dev (>= 1.0.6), binutils (>= 2.11.92.0.5-3), libsasl-dev, nas-dev
 Build-Depends-Indep: kdoc, qt-doc
-Build-Conflicts: nas-lib, qt3-tools, libglib1.3-dev
+Build-Conflicts: qt3-tools, libglib1.3-dev
 Section: libs
 Priority: optional
 Maintainer: Ivan E. Moore II <rkrusty@debian.org>
@@ -98,7 +98,7 @@ Architecture: any
 Section: devel
 Replaces: libarts (<< ${Source-Version}), libarts-alsa (<< ${Source-Version})
 Depends: libarts (= ${Source-Version}) | libarts-alsa (= ${Source-Version}), libaudiofile-dev
-Suggests: kdelibs-dev, libasound2-dev
+Suggests: kdelibs-dev, libasound2-dev, nas-dev
 Description: aRts Sound system (development files)
  aRts sound system.
  .
