--- a/debian/dh-make/rules
+++ b/debian/dh-make/rules
@@ -9,9 +9,16 @@
 export DH_COMPAT=3
 ARCH = $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 ifeq ($(ARCH),alpha)
-  COMPILER_FLAGS=CFLAGS="-O0 -mieee" CXXFLAGS="-O0 -mieee"
-else
-  COMPILER_FLAGS=CXX=g++ CC=gcc
+  export CFLAGS=-O0 -mieee
+  export CXXFLAGS=-O0 -mieee
+endif
+
+ifeq ($(ARCH),i386)
+  # Uncomment the following 2 lines to enable i686 optimziation
+  # You may want to tweak the settings to your likings
+  #export CFLAGS=-O3 -march=i686 -ffast-math -finline-functions
+  #export CXXFLAGS=-O3 -march=i686 -ffast-math -finline-functions
+  XINERAMA=--with-xinerama
 endif
 
 configure: configure-stamp
@@ -24,8 +31,7 @@ debian/debiandirs: debian/debianrules
 configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
-	$(COMPILER_FLAGS) \
-	#CONFIGURE#
+	#CONFIGURE# $(XINERAMA)
 
 	touch configure-stamp
 
@@ -83,7 +89,7 @@ binary-arch: build install
 	dh_installchangelogs #CHANGELOGS#
 	dh_link
 	dh_strip
-	dh_compress -X.docbook -X.css
+	dh_compress -X.docbook -X.css -X-license -X.dcl -X.bz2
 	dh_fixperms
 #	dh_makeshlibs
 	dh_installdeb
