--- a/debian/control
+++ b/debian/control
@@ -9,10 +9,9 @@ Standards-Version: 3.5.6
 Package: kdelibs4
 Architecture: any
 Section: libs
-Replaces: kdelibs2g, kdelibs3, kdepim-libs (<< 3.0-0.alpha1-1), koffice-libs, kdebase-libs (<< 4:2.2.1-2)
+Replaces: kdelibs3
 Depends: ${shlibs:Depends}, python, xbase-clients
 Suggests: libarts1, libarts-bin, libkmid0, libkmid-bin, aspell | ispell, libssl0.9.6, anti-aliasing-howto, gdb, kdelibs4-cups
-Provides: kdelibs
 Description: KDE core libraries (runtime files)
  KDE core libraries.
  You need these files to run kde applications.
