--- a/kdeui/Makefile.am
+++ b/kdeui/Makefile.am
@@ -37,7 +37,7 @@ include_HEADERS = kprogress.h kcolordlg.h kcolordialog.h kselect.h \
 		knuminput.h kseparator.h klineedit.h \
 		krestrictedline.h kcolorbutton.h kcolorbtn.h \
 		ksystemtray.h kdockwindow.h kbuttonbox.h \
-		kcontainer.h keditcl.h kled.h keditlistbox.h \
+		keditcl.h kled.h keditlistbox.h \
 		kwizard.h kkeydialog.h \
 		kurllabel.h kruler.h kcursor.h kaccelmenu.h \
 		klineeditdlg.h \
@@ -75,7 +75,7 @@ libkdeui_la_SOURCES = \
 		kseparator.cpp krestrictedline.cpp  \
 		kcolorbutton.cpp ksystemtray.cpp \
 		kbuttonbox.cpp keditcl1.cpp keditcl2.cpp \
-		kled.cpp kwizard.cpp kcontainer.cpp \
+		kled.cpp kwizard.cpp \
 		kkeydialog.cpp kkeybutton.cpp kruler.cpp kcursor.cpp \
 		kaccelmenu.cpp klineeditdlg.cpp  \
 		kcharselect.cpp kcolordrag.cpp  \
