Linux Directory Notification fixes: * Don't hang on read from pipe with multiple KDirWatch objects. * Don't make socket notifier for pipe owned by KDirWatch object, it may be needed after a KDirWatch object has been destructed as well. * Don't install signal handler for each KDirWatch object. * Fix a bunch of race-conditions. Not fixed: * We should disable signals when accessing fd_Entry structure. * We don't free kdirwatch_dnotify_handler.
svn path=/trunk/kdelibs/; revision=126723

--- a/kio/Makefile.am
+++ b/kio/Makefile.am
@@ -116,7 +116,7 @@ kioinclude_HEADERS = connection.h \
 noinst_HEADERS = kservicetypefactory.h kservicefactory.h \
 	kmessageboxwrapper.h \
 	ktraderparse.h ktraderparsetree.h yacc.h \
-	kimageiofactory.h \
+	kimageiofactory.h kdirwatch_dnotify.h \
 	kprotocolinfofactory.h # old stuff
 
 kde_mime_DATA = magic
