Synchronize with Tim:  - new gsl style fft  - iir filter transforms for lowpass/highpass/bandpass/bandstop  - ...
svn path=/trunk/kdelibs/; revision=127010

--- a/arts/flow/gsl/Makefile.am
+++ b/arts/flow/gsl/Makefile.am
@@ -5,13 +5,17 @@ AM_CXXFLAGS = -DGSL_WANT_GLIB_WRAPPER -DGSL_WANT_ARTS_THREADS
 
 ####### Files
 
+# from gslmakefile.inc
+GSL_C_SOURCES = gsldatacache.c gsldatahandle.c gslwavechunk.c gslwavedsc.c \
+  gslmath.c gslengine.c gsloputil.c gslopmaster.c \
+  gslopschedule.c gslfilter.c gslcommon.c gsldatautils.c \
+  gslconvert.c gslfft.c
+
 noinst_LTLIBRARIES = libgsl.la
 INCLUDES = -I$(top_srcdir)/arts/flow -I$(top_srcdir)/arts/mcop $(all_includes) 
 
-libgsl_la_SOURCES = gslcommon.c gsldatacache.c gslengine.c gslfilter.c \
-  gslmath.c gslopmaster.c gslopschedule.c gsloputil.c gslwavechunk.c \
-  gslwavedsc.c gslwaveloader.c gslglib.c gslglibhash.cc gslartsthreads.cc \
-  gsldatahandle.c
+libgsl_la_SOURCES = $(GSL_C_SOURCES) gslglib.c gslglibhash.cc gslartsthreads.cc
+  
 libgsl_la_LIBADD = $(top_builddir)/arts/mcop/libmcop.la -lm
 libgsl_la_LDFLAGS = -no-undefined
 
