--- a/security/crypto/Makefile.am
+++ b/security/crypto/Makefile.am
@@ -4,7 +4,7 @@ kde_module_LTLIBRARIES = libkcm_crypto.la
 libkcm_crypto_la_SOURCES = crypto.cpp certexport.cpp kdatetimedlg.cpp
 
 libkcm_crypto_la_LDFLAGS  = $(all_libraries) $(SSL_LDFLAGS) -module -avoid-version -no-undefined
-libkcm_crypto_la_LIBADD = -lkdeui -lkfile $(LIBSSL)
+libkcm_crypto_la_LIBADD = -lkdeui $(LIB_KFILE) $(LIBSSL)
 
 libkcm_crypto_la_METASOURCES = AUTO
 
