Use gslmakefile.inc. gsltests.c: compile even though g_file_test is currently unimplemented.
svn path=/trunk/kdelibs/; revision=127026

--- a/arts/flow/gsl/Makefile.am
+++ b/arts/flow/gsl/Makefile.am
@@ -1,25 +1,19 @@
+include gslmakefile.inc
+
 ####### Compile without glib
 
 AM_CFLAGS = -DGSL_WANT_GLIB_WRAPPER -DGSL_WANT_ARTS_THREADS
 AM_CXXFLAGS = -DGSL_WANT_GLIB_WRAPPER -DGSL_WANT_ARTS_THREADS
 
-####### Files
-
-# from gslmakefile.inc
-GSL_C_SOURCES = gsldatacache.c gsldatahandle.c gslwavechunk.c gslwavedsc.c \
-  gslmath.c gslengine.c gsloputil.c gslopmaster.c \
-  gslopschedule.c gslfilter.c gslcommon.c gsldatautils.c \
-  gslconvert.c gslfft.c
-
-noinst_LTLIBRARIES = libgsl.la
 INCLUDES = -I$(top_srcdir)/arts/flow -I$(top_srcdir)/arts/mcop $(all_includes) 
 
+noinst_LTLIBRARIES = libgsl.la
+
 libgsl_la_SOURCES = $(GSL_C_SOURCES) gslglib.c gslglibhash.cc gslartsthreads.cc
-  
 libgsl_la_LIBADD = $(top_builddir)/arts/mcop/libmcop.la -lm
 libgsl_la_LDFLAGS = -no-undefined
 
-check_PROGRAMS = gslglibhashtest
+noinst_PROGRAMS = $(GSL_NOINST_PROGS)
+progs_LDADD = libgsl.la
 
-gslglibhashtest_SOURCES = gslglibhashtest.cc
-gslglibhashtest_LDFLAGS = -lgsl
+EXTRA_DIST = $(GSL_PRIVATE_H_SOURCES) $(GSL_H_SOURCES)
