Use gsl fft (faster).
svn path=/trunk/kdelibs/; revision=127027

--- a/arts/flow/Makefile.am
+++ b/arts/flow/Makefile.am
@@ -1,4 +1,5 @@
 
+AM_CFLAGS = -DGSL_WANT_GLIB_WRAPPER -DGSL_WANT_ARTS_THREADS
 AM_CXXFLAGS = -DGSL_WANT_GLIB_WRAPPER -DGSL_WANT_ARTS_THREADS
 
 SUBDIRS = mcopclass gsl
