Large patch containing the work of last 2 weeks: - Introduced the concept of XML commands: pseudo printers and filter are both based on this (this allows for example to have options for pseudo printers, like for the PDF writer) - Added a framework to use external printer tools within KDEPrint: example is made using escputil (from gimp-print). TO BE TESTED by people who have a local EPSON printer. - Added a XML command builder to create new filters easily - kdeprintfax has now a real log window which us updated dynamically - instances and pseudo: when created/managed by root, it acts on global/system-wide files so that the changes are valid for all users (local files still overrides system-wide files, though) - Added error message when the printer list cannot be retrieved. For example when the CUPS server is not running.
svn path=/trunk/kdelibs/; revision=127052

--- a/kdeprint/filters/Makefile.am
+++ b/kdeprint/filters/Makefile.am
@@ -6,6 +6,7 @@ filters_DATA = enscript.desktop enscript.xml\
 	       psbook1.desktop psbook1.xml \
 	       psbook2.desktop psbook2.xml \
 	       psbook.desktop psbook.xml \
-	       psselect.desktop psselect.xml
+	       psselect.desktop psselect.xml \
+	       ps2pdf.desktop ps2pdf.xml
 
 bin_SCRIPTS = imagetops
