Restoring after yesterday's mess-up.
svn path=/trunk/kdelibs/; revision=127068

--- a/kio/application.desktop
+++ b/kio/application.desktop
@@ -2,7 +2,8 @@
 Type=ServiceType
 X-KDE-ServiceType=Application
 Name=Application
-Name[af]=AANSOEK
+Name[af]=aansoek
+Name[ar]=تطبيق
 Name[az]=Proqram
 Name[bg]=Приложение
 Name[br]=Arload
@@ -18,9 +19,10 @@ Name[et]=Rakendus
 Name[eu]=Aplikazioa
 Name[fi]=Sovellus
 Name[gl]=Aplicación
-Name[he]=םושיי
+Name[he]=יישום
 Name[hr]=Program
 Name[hu]=alkalmazás
+Name[id]=Aplikasi
 Name[is]=Forrit
 Name[it]=Applicazione
 Name[ja]=アプリケーション
@@ -30,13 +32,13 @@ Name[lv]=Aplikācija
 Name[mi]=Utauta
 Name[mk]=Апликација
 Name[mt]=Programm
+Name[nb]=Applikasjon
 Name[nl]=Applicatie
-Name[no]=Applikasjon
-Name[no_NY]=Program
+Name[nn]=Program
 Name[oc]=Aplicacions
 Name[pl]=Aplikacja
-Name[pt_BR]=Aplicativo
 Name[pt]=Aplicação
+Name[pt_BR]=Aplicativo
 Name[ru]=Приложение
 Name[sk]=Aplikácia
 Name[sl]=Uporabniški program
@@ -47,8 +49,11 @@ Name[tr]=Uygulama
 Name[uk]=Програма
 Name[vi]=Chương trình 
 Name[wa]=Programe
-Name[zh_CN.GB2312]=应用程序
-Name[zh_TW.Big5]=應用程式
+Name[xh]=Isicelo
+Name[xx]=xx
+Name[zh_CN]=应用程序
+Name[zh_TW]=應用程式
+Name[zu]=Isicelo
 
 [PropertyDef::NoDisplay]
 Type=bool
