--- a/kio/kcomprfilter.desktop
+++ b/kio/kcomprfilter.desktop
@@ -2,21 +2,24 @@
 Type=ServiceType
 X-KDE-ServiceType=KDECompressionFilter
 Name=KDE Compression Filter
-Name[af]=KDE SAAMPERSING FILTER
+Name[af]=kde saampersing filter
+Name[ar]=فلتر ضغط الملفات لKDE
 Name[az]=KDE Sıxışdırma Süzgəci
 Name[bg]=Комресиращ филтър на KDE
 Name[cs]=Kompresní filtr KDE
-Name[da]=KDE komprimeringsfilter
+Name[da]=KDE Komprimeringsfilter
 Name[de]=KDE-Komprimierungsfilter
 Name[el]=Φίλτρο Συμπίεσης KDE
 Name[eo]=KDE-kunpremo-filtrilo
 Name[es]=Filtro de compresión de KDE
 Name[et]=KDE pakkimise filter
+Name[eu]=KDE Compression Iragazki
 Name[fi]=KDE pakkaussuodin
 Name[fr]=Filtre de compression de KDE
 Name[gl]=Filtro de Compresión de KDE
-Name[he]=KDE לש ץוויכה ןנסמ
+Name[he]=מסנן הכיווץ של KDE
 Name[hu]=KDE tömörítésszűrő
+Name[id]=Filter kompresi KDE
 Name[is]=KDE þjöppunarsía
 Name[it]=Filtro compressione di KDE
 Name[ja]=KDE 圧縮フィルタ
@@ -24,12 +27,12 @@ Name[ko]=KDE 압축 거르개
 Name[lt]=KDE suspaudimo filtras
 Name[lv]=KDE Kompresijas FIltrs
 Name[mt]=Filtru tal-kompressjoni KDE
-Name[nl]=KDE Compressie Filter
-Name[no]=Komprimeringsfilter for KDE
-Name[no_NY]=KDE Kompresjonsfilter
+Name[nb]=Komprimeringsfilter for KDE
+Name[nl]=KDE Compressiefilter
+Name[nn]=KDE Kompresjonsfilter
 Name[pl]=Filtr kompresji KDE
-Name[pt_BR]=Filtro de compressão do KDE
 Name[pt]=Filtro de Compressão do KDE
+Name[pt_BR]=Filtro de compressão do KDE
 Name[ru]=Фильтр сжатия KDE
 Name[sk]=KDE filter pre kompresiu
 Name[sl]=Filter za stiskanje s KDE
@@ -38,5 +41,8 @@ Name[ta]=KDE ¦¿Õì¸ ÅÊ¸ðÊ
 Name[tr]=KDE Sıkıştırma Filtresi
 Name[uk]=Фільтр стискання KDE
 Name[vi]=Trình lọc nén của KDE 
-Name[zh_CN.GB2312]=KDE 压缩过滤
-Name[zh_TW.Big5]=KDE 壓縮過濾器
+Name[xh]=Indlela yokucoca ulwelo edityniswe kunye ye KDE
+Name[xx]=xx
+Name[zh_CN]=KDE 压缩过滤
+Name[zh_TW]=KDE 壓縮過濾器
+Name[zu]=KDE Encishisiweyo Indlela yokuhlanza
