--- a/kio/kscan.desktop
+++ b/kio/kscan.desktop
@@ -2,7 +2,7 @@
 Type=ServiceType
 X-KDE-ServiceType=KScan/KScanDialog
 Name=KScan
-Name[af]=KSKANDEER
+Name[af]=kskandeer
 Name[bg]=Скенер
 Name[eo]=Bildciferecigo
 Name[fr]=kScan
@@ -11,3 +11,5 @@ Name[ko]=K스캔
 Name[pl]=Skan
 Name[ru]=Сканер
 Name[sv]=Kscan
+Name[xh]=Imita yovavanyo ye K
+Name[xx]=xx
