--- a/kio/kurifilterplugin.desktop
+++ b/kio/kurifilterplugin.desktop
@@ -2,7 +2,8 @@
 Type=ServiceType
 X-KDE-ServiceType=KURIFilter/Plugin
 Name=Enhanced Browsing Plugin
-Name[af]=VERBETERDE BLAAIïNG INPLAK
+Name[af]=verbeterde blaaiïng inplak
+Name[ar]=ملحقات التصفح المحسن
 Name[az]=Təkmilləşmiş Səyyah Əlavəsi
 Name[bg]=Вграден Plugin за броузера
 Name[br]=Lugant Furchal Gwellaet
@@ -15,12 +16,14 @@ Name[el]=Πρόσθετο Βελτιωμένης Φυλλομέτρησης
 Name[eo]=progresinta TTTum-kromaĵo
 Name[es]=Plugin de Navegación Mejorada
 Name[et]=Täiustatud brausimise plugin
+Name[eu]=Erabateko Arakatzeko Plugina
 Name[fi]=Edistynyt selailusovelma
 Name[fr]=Module de navigation avancée
 Name[gl]=Plugin de Navegación Mellorada
-Name[he]=תרפושמ השילגל ףסות
+Name[he]=תוסף לגלישה משופרת
 Name[hr]=Dodatak za napredno pretraživanje
 Name[hu]=Továbbfejlesztett böngészés bővítőmodul
+Name[id]=Plugin Browsing yang disempurnakan
 Name[is]=Netslóðagaldrar
 Name[it]=Plugin navigazione avanzata
 Name[ja]=拡張ブラウズプラグイン
@@ -29,21 +32,24 @@ Name[lt]=Išplėstinio naršymo priedas
 Name[lv]=Uzlabotas Pārlūkošanas Iespraudnis
 Name[mk]=Плагин за напредно разгледување
 Name[mt]=Plugin għall-Browsing Estiż
+Name[nb]=Utvidet weblesing-plugin
 Name[nl]=Verbeterd Browsen Plugin
-Name[no]=Utvidet weblesing-plugin
-Name[no_NY]=Tilleggsmodul for utvida surfing
+Name[nn]=Tilleggsmodul for utvida surfing
 Name[oc]=Branquament de navegacion amilhorada
 Name[pl]=Moduł do rozszerzonego przeglądania
-Name[pt_BR]=Plug-in de navegação melhorada
 Name[pt]=Navegação Melhorada
+Name[pt_BR]=Plug-in de navegação melhorada
 Name[ru]=Плагин броузера
-Name[sk]=Zásuvný modul prehliadača
+Name[sk]=Modul rozšíreného prehliadača
 Name[sl]=Vstavek za izboljšano brskanje
-Name[sr]=Plugin za napredno pretraživanje
+Name[sr]=Dodatak za napredno pretraživanje
 Name[sv]=Utökad webbläsning
 Name[ta]=§ÁõÀÎò¾¢Â ¯Ä¡Åü ¦ºÕ¸ø 
 Name[tr]=Gelişmiş Tarayıcı Eklentisi
 Name[uk]=Додаток розширеного перегляду
 Name[vi]=Các plugin đềEtănt cường duyệt 
-Name[zh_CN.GB2312]=增强的浏览插件
-Name[zh_TW.Big5]=強化瀏覽外掛程式
+Name[xh]=Iplagi efakiweyo yokukhangela iincwadi eyomeleziweyo
+Name[xx]=xx
+Name[zh_CN]=增强的浏览插件
+Name[zh_TW]=增強的瀏覽外掛程式
+Name[zu]=Iplagi efakiweyo yokubheka izincwadi Zezinga eliphezulu
