--- a/debian/rules
+++ b/debian/rules
@@ -14,9 +14,16 @@ KDEDOCDIR = usr/share/doc/kdelibs4-doc/html
 export KDB2HTML_UNINSTALLED=$(BUILDDIR)/ksgmltools/customization/
 ARCH = $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 ifeq ($(ARCH),alpha)
-  COMPILER_FLAGS=CFLAGS="-O0 -mieee" CXXFLAGS="-O0 -mieee"
-else
-  COMPILER_FLAGS=CXX=g++ CC=gcc
+  export CFLAGS=-O0 -mieee
+  export CXXFLAGS=-O0 -mieee
+endif
+
+ifeq ($(ARCH),i386)
+  # Uncomment the following 2 lines to enable i686 optimziation
+  # You may want to tweak the settings to your likings
+  #export CFLAGS=-O3 -march=i686 -ffast-math -finline-functions
+  #export CXXFLAGS=-O3 -march=i686 -ffast-math -finline-functions
+  XINERAMA=--with-xinerama
 endif
 
 tmp = $(shell pwd)/debian/build-tmp
@@ -36,10 +43,8 @@ build-stamp:
 	fi
 	-chmod 755 configure
 	version=`head -1 debian/changelog | sed -e "s#.*(\([^)]*\)).*#Debian Package \1#"` ;\
-	$(COMPILER_FLAGS) \
 	./configure $(configkde) --with-distribution="$$version (`cat /etc/debian_version`)" \
-	--includedir=/usr/include/kde --without-alsa \
-	--disable-cups
+	--disable-cups --without-alsa $(XINERAMA)
 
 	make
 	make DESTDIR=`pwd`/debian/install-tmp/ install
@@ -52,9 +57,7 @@ alsa-stamp:
 	-rm -f `find arts -name "*.mcoptype"`
 	-make -C libkmid/ clean
 	-make -C kdeprint/cups clean
-	$(COMPILER_FLAGS) \
-	./configure $(configkde) --with-alsa --enable-cups \
-		--includedir=/usr/include/kde
+	./configure $(configkde) --with-alsa --enable-cups $(XINERAMA)
 	make -C libkmid/ 
 	make -C arts/ 
 	make -C kdeprint/cups 
