[iem] another fix
svn path=/branches/KDE_2_2_BRANCH/kdelibs/; revision=127186

--- a/debian/rules
+++ b/debian/rules
@@ -162,6 +162,7 @@ binary-arch:  build install
 	dh_movefiles -pkdelibs3-cups --sourcedir=debian/kdelibs3
 	dh_movefiles -plibarts-alsa --sourcedir=debian/alsa-tmp
 	dh_movefiles -plibkmid-alsa --sourcedir=debian/alsa-tmp
+	dh_movefiles -pkdelibs3-bin --sourcedir=debian/kdelibs3
 	dh_installchangelogs -a 
 	dh_strip -a
 	dh_perl -a
