--- a/arts/flow/gsl/Makefile.am
+++ b/arts/flow/gsl/Makefile.am
@@ -1,3 +1,6 @@
+
+EXTRA_DIST = $(GSL_PRIVATE_H_SRC) $(GSL_H_SRC)
+
 include gslmakefile.inc
 
 ####### Compile without glib
@@ -9,11 +12,8 @@ INCLUDES = -I$(top_srcdir)/arts/flow -I$(top_srcdir)/arts/mcop $(all_includes)
 
 noinst_LTLIBRARIES = libgsl.la
 
-libgsl_la_SOURCES = $(GSL_C_SOURCES) gslglib.c gslglibhash.cc gslartsthreads.cc
+libgsl_la_SOURCES = $(GSL_C_SRC) gslglib.c gslglibhash.cc gslartsthreads.cc
 libgsl_la_LIBADD = $(top_builddir)/arts/mcop/libmcop.la -lm
 libgsl_la_LDFLAGS = -no-undefined
 
 noinst_PROGRAMS = $(GSL_NOINST_PROGS)
-progs_LDADD = libgsl.la
-
-EXTRA_DIST = $(GSL_PRIVATE_H_SOURCES) $(GSL_H_SOURCES)
