now that coolo has blown away my hopes ... :) -$(patsubst %,$(srcdir)/%,$(libartsflow_la_SOURCES)): artsflow.h +$(libartsflow_la_SOURCES:%=$(srcdir)/%): artsflow.h it works at least on solaris (ccs & xpg4) and gnu.
svn path=/trunk/kdelibs/; revision=127387

--- a/arts/flow/Makefile.am
+++ b/arts/flow/Makefile.am
@@ -43,7 +43,7 @@ DISTCLEANFILES = artsflow.cc artsflow.h artsflow.mcoptype artsflow.mcopclass
 artsflow.cc: artsflow.h
 artsflow.mcoptype: artsflow.h
 artsflow.mcopclass: artsflow.h
-$(patsubst %,$(srcdir)/%,$(libartsflow_la_SOURCES)): artsflow.h
+$(libartsflow_la_SOURCES:%=$(srcdir)/%): artsflow.h
 
 artsflow.h: $(top_srcdir)/arts/flow/artsflow.idl $(MCOPIDL)
 	$(MCOPIDL) -t $<
