The subSubType is  QStringList type
svn path=/trunk/kdelibs/; revision=127456

--- a/ksmartcard/kardimpl/kcardimplsvc.desktop
+++ b/ksmartcard/kardimpl/kcardimplsvc.desktop
@@ -7,4 +7,4 @@ Type=QString
 [PropertyDef::X-KDE-Smartcard-SubType]
 Type=QString
 [PropertyDef::X-KDE-Smartcard-SubSubType]
-Type=QString
+Type=QStringList
