--- a/arts/kde/Makefile.am
+++ b/arts/kde/Makefile.am
@@ -8,13 +8,13 @@ INCLUDES = -I$(top_srcdir)/arts \
 lib_LTLIBRARIES  	    =	libartskde.la
 libartskde_la_SOURCES	    =	artskde.cc kioinputstream_impl.cpp kplayobject.cc \
 				kplayobjectfactory.cc kartsfloatwatch.cpp kartsdispatcher.cc \
-				kreceiver.cpp
+				kreceiver.cpp kartsserver.cpp
 libartskde_la_LIBADD        =   $(LIB_KSYCOCA) $(top_builddir)/arts/qtmcop/libqtmcop.la $(top_builddir)/arts/soundserver/libsoundserver_idl.la
 libartskde_la_LDFLAGS       =   $(all_libraries) -no-undefined -version-info 1:0
 libartskde_la_METASOURCES   =	AUTO
 
 artskdeincludedir	    =	$(includedir)/arts
-artskdeinclude_HEADERS      = 	kplayobject.h kplayobjectfactory.h kartsfloatwatch.h artskde.h kartsdispatcher.h kreceiver.h
+artskdeinclude_HEADERS      = 	kplayobject.h kplayobjectfactory.h kartsfloatwatch.h artskde.h kartsdispatcher.h kreceiver.h kartsserver.h
 
 $(srcdir)/kioinputstream_impl.cpp: artskde.h
 $(srcdir)/kartsfloatwatch.cpp: artskde.h
