--- a/debian/control
+++ b/debian/control
@@ -110,7 +110,7 @@ Description: aRts Sound system (built with alsa support)
 Package: libarts1-dev
 Architecture: any
 Section: devel
-Replaces: libarts-dev, libarts-bin, libarts, libarts-alsa
+Replaces: libarts-dev, libarts-bin, libarts, libarts-alsa, libarts1 (<< 3.0-0.beta1-1), libarts1-alsa (<< 3.0-0.beta1-1)
 Depends: libarts1 (= ${Source-Version}) | libarts1-alsa (= ${Source-Version}), libarts-bin (= ${Source-Version}), libc6-dev, libaudiofile-dev
 Suggests: kdelibs4-dev, libasound2-dev
 Conflicts: libarts-dev
@@ -140,6 +140,7 @@ Description: aRts Sound system (kde/midi binaries)
 Package: libkmid0-dev
 Architecture: any
 Section: devel
+Replaces: libkmid0 (<< 3.0-0.beta1-1), libkmid0-alsa (<< 3.0-0.beta1-1)
 Depends: libkmid0 (= ${Source-Version}) | libkmid0-alsa (= ${Source-Version}) , libkmid-bin (= ${Source-Version}), kdelibs4-dev
 Description: aRts Sound system (midi development files)
  aRts sound system.
