--- a/kdeui/Makefile.am
+++ b/kdeui/Makefile.am
@@ -57,7 +57,8 @@ include_HEADERS = kprogress.h kcolordlg.h kcolordialog.h kselect.h \
 		kpanelapplet.h kpushbutton.h kdcopactionproxy.h kcolorcombo.h \
 		kpanelextension.h kcompletionbox.h ksqueezedtextlabel.h \
 		kcommand.h kwindowlistmenu.h kfontcombo.h kaccelgen.h ktip.h \
-		kdatewidget.h karrowbutton.h kguiitem.h kstdguiitem.h
+		kdatewidget.h karrowbutton.h kguiitem.h kstdguiitem.h \
+		kstringvalidator.h
 
 # the order of the sources isn't randomly (at least not completly).
 # the order is predictated by the use of X11 header files
@@ -95,7 +96,8 @@ libkdeui_la_SOURCES = \
 		kcompletionbox.cpp ksqueezedtextlabel.cpp kcmodule.cpp \
 		kcommand.cpp kwindowlistmenu.cpp kfontcombo.cpp ktip.cpp \
 		kdatewidget.cpp karrowbutton.cpp kmainwindowiface.cpp \
-                kmainwindowiface.skel kguiitem.cpp kstdguiitem.cpp
+                kmainwindowiface.skel kguiitem.cpp kstdguiitem.cpp \
+		kstringvalidator.cpp
 
 noinst_HEADERS = kdockwidget_private.h klistviewlineedit.h kkeybutton.h \
 		kdialogbase_priv.h kaboutdialog_private.h kcursor_private.h \
