KCardfactory has started to work along with kcarddb and smartcard services installed
svn path=/trunk/kdelibs/; revision=128391

--- a/ksmartcard/kardlib/Makefile.am
+++ b/ksmartcard/kardlib/Makefile.am
@@ -1,4 +1,4 @@
-INCLUDES=$(all_includes) $(PCSC_INCLUDES) -I$(top_srcdir)/kio
+INCLUDES=$(all_includes) $(PCSC_INCLUDES) -I$(top_srcdir)/kio -I../kardimpl
 
 lib_LTLIBRARIES = libksmartcard.la
 METASOURCES= AUTO
@@ -7,7 +7,8 @@ include_HEADERS = kcardreader.h			\
 		  kcardstatus.h			\
 		  kpcsc.h			\
 		  kcarddb.h			\
-		  kcardfactory.h		
+		  kcardfactory.h		\
+	          kcardimplementation.h
 
 noinst_HEADERS = 
 
@@ -16,8 +17,8 @@ libksmartcard_la_SOURCES = \
 				kcarddb.cc		\
 				kcardstatus.cc		\
 				kcardreader.cc		\
-				kcardfactory.cc		
-
+				kcardfactory.cc		\
+				kcardimplementation.cc
 
 libksmartcard_la_LDFLAGS = $(all_libraries) $(PCSC_LDFLAGS) -version-info 1:0 -no-undefined
 libksmartcard_la_LIBADD = $(LIB_KDEUI) $(LIB_KSYCOCA)
