another depenancy (synthschedule.cc includes synthschedule.h includes artsflow.h)
+synthschedule.cc: artsflow.h

svn path=/trunk/kdelibs/; revision=128648

--- a/arts/flow/Makefile.am
+++ b/arts/flow/Makefile.am
@@ -39,7 +39,7 @@ artsinclude_HEADERS = artsflow.h audiosubsys.h cache.h \
 DISTCLEANFILES = artsflow.cc artsflow.h artsflow.mcoptype artsflow.mcopclass
 
 ######## Build rules
-
+synthschedule.cc: artsflow.h
 artsflow.cc: artsflow.h
 artsflow.mcoptype: artsflow.h
 artsflow.mcopclass: artsflow.h
