--- a/khtml/xml/Makefile.am
+++ b/khtml/xml/Makefile.am
@@ -17,7 +17,7 @@
 #    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 #    Boston, MA 02111-1307, USA.
 
-KDE_CXXFLAGS = -UQT_NO_COMPAT
+KDE_CXXFLAGS = $(WOVERLOADED_VIRTUAL)
 
 noinst_LTLIBRARIES = libkhtmlxml.la
 libkhtmlxml_la_SOURCES = \
@@ -36,9 +36,7 @@ noinst_HEADERS = \
 	dom2_eventsimpl.h  dom2_viewsimpl.h
 
 INCLUDES = -I$(top_srcdir)/kimgio -I$(top_srcdir)/kio -I$(top_srcdir)/dcop \
- -I$(top_srcdir)/khtml -I$(top_srcdir)/khtml/misc -I$(top_srcdir)/khtml/css \
- -I$(top_srcdir)/khtml/dom -I$(top_srcdir)/khtml/xml -I$(top_srcdir)/khtml/html \
- -I$(top_srcdir) $(all_includes)
+ -I$(top_srcdir)/khtml -I$(top_srcdir) $(all_includes)
 
 SRCDOC_DEST=$(kde_htmldir)/en/kdelibs/khtml
 
