This one's an early New Year's present.
- Add a preliminary version of KStyle which includes
  XRender accelerated menu transparency where available.

- Modified highcolor to use the new KStyle API.

Note: Having transparent menus as default is only temporary until
      a new style kcmmodule is complete.

svn path=/trunk/kdelibs/; revision=128990

--- a/kdefx/Makefile.am
+++ b/kdefx/Makefile.am
@@ -27,9 +27,9 @@ libkdefx_la_LDFLAGS = $(KDE_MT_LDFLAGS) $(all_libraries) -no-undefined -version-
 libkdefx_la_LIBADD = $(LIB_QT)
 
 include_HEADERS = kpixmap.h kpixmapsplitter.h \
-	kpixmapeffect.h kimageeffect.h kdrawutil.h
+	kpixmapeffect.h kimageeffect.h kdrawutil.h kstyle.h
 
 libkdefx_la_SOURCES = kpixmap.cpp kpixmapsplitter.cpp \
-		kpixmapeffect.cpp kimageeffect.cpp kdrawutil.cpp
+		kpixmapeffect.cpp kimageeffect.cpp kdrawutil.cpp kstyle.cpp
 
 METASOURCES = AUTO
